# Golf-Game

./: .gitignore  CMakeLists.txt  README.md
android/: local.properties
android-project/app/jni/src/: main.c
android/app/: build.gradle
android/app/jni/: Application.mk
android/app/jni/src/: Android.mk  main.c
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
script/: build_android_app.py  compile_and_run.py
src/: main.cpp
src/base/: base.hpp  definition.hpp  event.cpp  event.hpp  game.cpp  game.hpp  game_object.hpp  init.cpp  init.hpp  state.hpp  system.cpp  system.hpp
src/base/component/: drawable_component.cpp  drawable_component.hpp  sized_component.cpp  sized_component.hpp
src/base/format/: color.cpp  color.hpp  direction.hpp  padding.cpp  padding.hpp  size.cpp  size.hpp
src/base/math/: vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
src/base/mixin/: pixmap.cpp  pixmap.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp
src/base/model/: canvas.cpp  canvas.hpp
src/base/object/: game_object.cpp  game_object.hpp  object_manager.cpp  object_manager.hpp  object_registry.cpp  object_registry.hpp
src/core/: root.cpp  root.hpp
